    build with optional ISABELLE_BIBTEX and ISABELLE_MAKEINDEX

  - "pdflatex": as above, but use ISABELLE_PDFLATEX (legacy mode for
    special LaTeX styles)

  - "build": delegate to the executable "./build pdf"

The presence of a "build" command within the document output directory
explicitly requires document_build=build. Minor INCOMPATIBILITY, need to
adjust session ROOT options.

* Option "document_echo" informs about document file names during
session presentation.

* Option "document_heading_prefix" specifies a prefix for the LaTeX
macro names generated from document heading commands like 'chapter',
'section' etc. The default is "isamarkup", so 'section' becomes
"\isamarkupsection" for example.

* The command-line tool "isabelle latex" has been discontinued,
INCOMPATIBILITY for old document build scripts.

  - Former "isabelle latex -o sty" has become obsolete: Isabelle .sty
    files are automatically generated within the document output
    directory.

  - Former "isabelle latex -o pdf" should be replaced by
    "$ISABELLE_LUALATEX root" or "$ISABELLE_PDFLATEX root" (without
    quotes), according to the intended LaTeX engine.

  - Former "isabelle latex -o bbl" should be replaced by
    "$ISABELLE_BIBTEX root" (without quotes).

  - Former "isabelle latex -o idx" should be replaced by
    "$ISABELLE_MAKEINDEX root" (without quotes).

* Option "document_bibliography" explicitly enables the use of bibtex;
the default is to check the presence of root.bib, but it could have a
different name.

* Improved LaTeX typesetting of \<open>...\<close> using \guilsinglleft ...
\guilsinglright. INCOMPATIBILITY, need to use \usepackage[T1]{fontenc}
(which is now also the default in "isabelle mkroot").

* Simplified typesetting of \<guillemotleft>...\<guillemotright> using \guillemotleft ...
\guillemotright from \usepackage[T1]{fontenc} --- \usepackage{babel} is
no longer required.


*** Pure ***

* "global_interpretation" is applicable in instantiation and overloading